[gd_scene load_steps=14 format=2]

[ext_resource path="res://Template1_2dCharacter/src/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Template1_2dCharacter/src/Player/States/Slide.gd" type="Script" id=2]
[ext_resource path="res://Template1_2dCharacter/src/Player/EnemyDetector.tscn" type="PackedScene" id=3]
[ext_resource path="res://Template1_2dCharacter/src/Player/Skin.tscn" type="PackedScene" id=4]
[ext_resource path="res://Template1_2dCharacter/src/Main/StateMachine/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://Template1_2dCharacter/src/Player/States/Move.gd" type="Script" id=6]
[ext_resource path="res://Template1_2dCharacter/src/Player/States/Idle.gd" type="Script" id=7]
[ext_resource path="res://Template1_2dCharacter/src/Player/States/Run.gd" type="Script" id=8]
[ext_resource path="res://Template1_2dCharacter/src/Player/States/Air.gd" type="Script" id=9]
[ext_resource path="res://Template1_2dCharacter/src/Player/States/Debug.gd" type="Script" id=11]
[ext_resource path="res://Template1_2dCharacter/src/Player/States/Spawn.gd" type="Script" id=12]
[ext_resource path="res://Template1_2dCharacter/src/Player/States/Die.gd" type="Script" id=13]

[sub_resource type="SphereShape" id=1]
radius = 0.609867

[node name="Player" type="KinematicBody"]
collision_mask = 12
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.536042, 0 )
shape = SubResource( 1 )

[node name="Skin" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 0.89812, -0.439751, 0, 0.439751, 0.89812, 0, 0, 0 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
initial_state = NodePath("Move")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
bump_factor_default = 3.0

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 7 )

[node name="JumpDelay" type="Timer" parent="StateMachine/Move/Idle"]
wait_time = 0.1
one_shot = true

[node name="Run" type="Node" parent="StateMachine/Move"]
script = ExtResource( 8 )

[node name="Slide" type="Node" parent="StateMachine/Move"]
script = ExtResource( 2 )

[node name="MomentumTimer" type="Timer" parent="StateMachine/Move/Slide"]
wait_time = 5.0
one_shot = true

[node name="CooldownTimer" type="Timer" parent="StateMachine/Move/Slide"]
one_shot = true

[node name="Air" type="Node" parent="StateMachine/Move"]
script = ExtResource( 9 )
acceleration_x = 3000.0

[node name="JumpDelay" type="Timer" parent="StateMachine/Move/Air"]
wait_time = 0.3
one_shot = true

[node name="Debug" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="EnemyDetector" parent="." instance=ExtResource( 3 )]

[editable path="Skin"]
